--- a/styles.css
+++ b/styles.css
@@ -4,20 +4,27 @@ html, body {
 
 /* definir backgrounds */
 .masmorra{
-    position: relative;
     background-image: url("img/background.jpg");
     background-size: cover;
+    background-repeat: no-repeat;
+    background-color: rgb(19, 19, 19);
 }
 
 .sala-masmorra{
-    position: relative;
     background-image: url("img/background2.jpg");
-    background-size: cover;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgb(0, 0, 0);
 }
 .batalha{
     position: relative;
     background-image: url("img/mesa.png");
-    background-size: cover;
+    background-size: contain;
+}
+
+.background-deck{
+    background-color: rgb(44, 44, 44);
 }
 
 /* estilos para o index */
@@ -32,50 +39,59 @@ html, body {
 
 #menu {
     display: grid;
-    grid-template: 1fr 1fr 1fr/ 1fr 1fr 1fr 1fr 1fr; 
-    grid-template-areas: 
-    ". p . d ."
-    ". . . . ."
-    ". s . n .";
+    grid-template: auto 1fr 1fr / 1fr 1fr 1fr 1fr 1fr;          
+}
+#index h1{
+    grid-row: 1 / 2;
+    grid-column: 2 / 5;
 }
 
 #jogar {
-    grid-area: p;
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
 }
 #deck {
-    grid-area: d;
+    grid-row: 2 / 3;
+    grid-column: 4 / 5; 
 }
 #shop {
-    grid-area: s;
+    grid-row: 3 / 4;
+    grid-column: 2 / 3;
 }
 #sobre {
-    grid-area: n;
+    grid-row: 3 / 4;
+    grid-column: 4 / 5;
 }
 
 /*estilos para os botoes */
 .botao{
-    text-shadow: 3px 3px rgb(104, 182, 255);
+    text-shadow: 2px 2px rgb(104, 182, 255);
     color: rgb(255, 255, 255); 
-    background-color: rgba(7, 44, 66, 0.616);
     text-align: center;
-    align-items: center;
     font-size: 9vh;
+    background-color: rgb(2, 57, 88);
     font-family: 'Dancing Script', cursive;
-    width: 100vh;
-    margin-right: auto;
-    margin-left: auto;
-    width: 32vh;
-    padding: 1vh 5vh;
+
+    width: 42vh;
+    height: 20vh;   
     border-radius: 3%;
     border: 0.2vh solid black;
 }
 
+
+a {
+    text-decoration-line: none;
+}
+
 .botao:hover{
-    background-color: rgb(2, 57, 88);
+    background-color: rgba(7, 44, 66, 0.904);
     cursor: pointer;
     transition: 300ms;
     color: gray;
-    text-shadow: goldenrod 1px 1px;
+    text-shadow: goldenrod 2px 2px;
+    border: 1.2vh solid rgba(255, 230, 0, 0.795);
+    height: 18vh;
+    width: 40vh;
 }
 
 .botao:active{
@@ -86,37 +102,151 @@ html, body {
     text-shadow: goldenrod 1px 1px;
 } 
 
-a {
-    text-decoration-line: none;
-}
-
-
 .volta {
-    font-size: 20vh; 
-    float: left;
+    font-size: 10vh; 
+    position: sticky;
+    top: 0px;
+    left: 0px;
+    color: rgb(255, 255, 255); 
+    text-shadow: 1px 1px blue;
+    text-align: center;
+    background-color: rgb(94, 94, 94);
+    font-family: 'Dancing Script', cursive;  
+    border-radius: 20%;
+    height: 9vh;
+    width: 11vh;
+    padding-bottom: 2vh;
+    border: 1vh solid rgb(255, 255, 255);
 }
+
+.volta:hover{
+    background-color: rgba(22, 22, 22, 0.904);
+    cursor: pointer;
+    color: gray;    
+    transition: 200ms;
+}
+
+
 
 /* estilos para as batalhas */
 
 #baralho-area img{
-    position: relative;
-    width: 24vh;
-}
+    position: fixed;
+    width: 24.5vh;
+    height: 35.5vh;
+    bottom: 5%;
+    right: 5%;
+}   
 #baralho-area img:not(#base){
-    position: absolute;
-    width: 22vh;
-    left: 1vh;
-    top: 1vh;
+    width: 22.05vh;
+    height: 31.95vh;
+    bottom: 5%;
+    right: 5%;
 }
 
 /* fim */
 
 /* estilos para a seleção de batalha */ 
 
-#selecionar div div{
-    font-size: 5vh;
-    background-image: url("img/Runa-Logo.png");
-    background-size: cover;
+#batalhas{
+    display: flex;  
+    flex-direction: column;
+    align-items: center;
 }
 
+#oponente{
+    font-size: 5vh;
+    background-size: cover;
+    text-shadow: 2px 2px rgb(104, 182, 255);
+    color: rgb(255, 255, 255); 
+    text-align: center;
+    font-family: 'Dancing Script', cursive;
+    width: 30vh;
+    padding: 1vh 5vh;
+}
+
+#nome-oponente{
+    text-align: center;
+    font-size: 5vh;
+    font-family: 'Dancing Script', cursive;
+    text-shadow: 1px 1px rgb(255, 0, 0);
+    color: rgb(255, 255, 255); 
+    position: relative;
+}
+
+.controle{
+    background-color: gray;
+    text-align: center;
+    font-size: 4vh;
+    font-family: 'Dancing Script', cursive;
+    color: rgb(255, 0, 0);
+}
+#anterior{
+    position: absolute;
+    left: 47%;  
+    bottom: 10%;
+}
+#proximo{
+    position: absolute;
+    right: 47%;
+    bottom: 10%;
+}
+
+
+/* fim */
+
+/*estilo para o baralho/deck*/  
+
+    #deck {
+        display: grid;
+        grid-template: 1fr auto 1fr auto / 1fr 1fr 1fr 1fr 1fr;
+    }
+    
+    #voltar-deck{
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+    }
+    
+    #deck h1 {
+        grid-column: 2 / 5;
+        grid-row: 1 / 2;
+    }
+    
+    #baralho-formado{
+        display: flex;
+        flex-wrap: wrap;
+        align-content: center;
+        justify-content: center;
+        background-color: rgb(24, 24, 24);
+        border: 2vh rgb(0, 0, 0) solid;
+        grid-column: 2 / 5;
+        grid-row: 2 / 3;
+        position: sticky;
+        top: 0; 
+    }
+    
+    #deck h2 {
+        grid-column: 2 / 5;
+        grid-row: 3 / 4;
+    }
+    
+    #colecao{
+        display: flex;
+        flex-wrap: wrap;
+        align-content: center;
+        justify-content: center;
+        background-color: rgb(36, 36, 36);
+        border: 1vh rgb(255, 255, 255) solid;
+        grid-column: 2 / 5;
+        grid-row: 4 / 5;
+    }
+
+    #colecao img{
+        width: 23.32vh;
+        height: 32.84vh;
+    }
+    #baralho-formado img{
+        width: 11.66;
+        height: 16.42vh;
+    }
 /* fim */
