--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,51 @@
-html, body { 
+html,
+body {
     min-height: 100%;
 }
 
 /* definir backgrounds */
-.masmorra{
+.masmorra {
     background-image: url("img/background.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-color: rgb(19, 19, 19);
 }
 
-.sala-masmorra{
+.sala-masmorra {
     background-image: url("img/background2.jpg");
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
     background-color: rgb(0, 0, 0);
 }
-.batalha{
+
+.batalha {
     position: relative;
     background-image: url("img/mesa.png");
     background-size: contain;
 }
 
-.background-deck{
+.background-deck {
     background-color: rgb(44, 44, 44);
 }
 
 /* estilos para o index */
 
-#index h1, .titulo{
+#index h1,
+.titulo {
     text-align: center;
     font-size: 10vh;
     font-family: 'Dancing Script', cursive;
     text-shadow: 3px 3px rgb(104, 182, 255);
-    color: rgb(255, 255, 255); 
+    color: rgb(255, 255, 255);
 }
 
 #menu {
     display: grid;
-    grid-template: auto 1fr 1fr / 1fr 1fr 1fr 1fr 1fr;          
+    grid-template: auto 1fr 1fr / 1fr 1fr 1fr 1fr 1fr;
 }
-#index h1{
+
+#index h1 {
     grid-row: 1 / 2;
     grid-column: 2 / 5;
 }
@@ -50,30 +54,33 @@ html, body {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
 }
+
 #deck {
     grid-row: 2 / 3;
-    grid-column: 4 / 5; 
+    grid-column: 4 / 5;
 }
+
 #shop {
     grid-row: 3 / 4;
     grid-column: 2 / 3;
 }
+
 #sobre {
     grid-row: 3 / 4;
     grid-column: 4 / 5;
 }
 
 /*estilos para os botoes */
-.botao{
+.botao {
     text-shadow: 2px 2px rgb(104, 182, 255);
-    color: rgb(255, 255, 255); 
+    color: rgb(255, 255, 255);
     text-align: center;
     font-size: 9vh;
     background-color: rgb(2, 57, 88);
     font-family: 'Dancing Script', cursive;
 
     width: 42vh;
-    height: 20vh;   
+    height: 20vh;
     border-radius: 3%;
     border: 0.2vh solid black;
 }
@@ -83,7 +90,7 @@ a {
     text-decoration-line: none;
 }
 
-.botao:hover{
+.botao:hover {
     background-color: rgba(7, 44, 66, 0.904);
     cursor: pointer;
     transition: 300ms;
@@ -94,24 +101,24 @@ a {
     width: 40vh;
 }
 
-.botao:active{
+.botao:active {
     background-color: rgb(5, 82, 128);
     cursor: pointer;
     transition: 100ms;
     color: gray;
     text-shadow: goldenrod 1px 1px;
-} 
+}
 
 .volta {
-    font-size: 10vh; 
+    font-size: 10vh;
     position: sticky;
     top: 0px;
     left: 0px;
-    color: rgb(255, 255, 255); 
+    color: rgb(255, 255, 255);
     text-shadow: 1px 1px blue;
     text-align: center;
     background-color: rgb(94, 94, 94);
-    font-family: 'Dancing Script', cursive;  
+    font-family: 'Dancing Script', cursive;
     border-radius: 20%;
     height: 9vh;
     width: 11vh;
@@ -119,134 +126,199 @@ a {
     border: 1vh solid rgb(255, 255, 255);
 }
 
-.volta:hover{
+.volta:hover {
     background-color: rgba(22, 22, 22, 0.904);
     cursor: pointer;
-    color: gray;    
+    color: gray;
     transition: 200ms;
 }
 
 
 
-/* estilos para as batalhas */
 
-#baralho-area img{
-    position: fixed;
-    width: 24.5vh;
-    height: 35.5vh;
-    bottom: 5%;
-    right: 5%;
-}   
-#baralho-area img:not(#base){
-    width: 22.05vh;
-    height: 31.95vh;
-    bottom: 5%;
-    right: 5%;
-}
+/* estilos para a seleção de batalha */
 
-/* fim */
-
-/* estilos para a seleção de batalha */ 
-
-#batalhas{
-    display: flex;  
+#batalhas {
+    display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#oponente{
+#oponente {
     font-size: 5vh;
     background-size: cover;
     text-shadow: 2px 2px rgb(104, 182, 255);
-    color: rgb(255, 255, 255); 
+    color: rgb(255, 255, 255);
     text-align: center;
     font-family: 'Dancing Script', cursive;
     width: 30vh;
     padding: 1vh 5vh;
 }
 
-#nome-oponente{
+#nome-oponente {
     text-align: center;
     font-size: 5vh;
     font-family: 'Dancing Script', cursive;
     text-shadow: 1px 1px rgb(255, 0, 0);
-    color: rgb(255, 255, 255); 
+    color: rgb(255, 255, 255);
     position: relative;
 }
 
-.controle{
+.controle {
     background-color: gray;
     text-align: center;
     font-size: 4vh;
     font-family: 'Dancing Script', cursive;
     color: rgb(255, 0, 0);
 }
-#anterior{
+
+#anterior {
     position: absolute;
-    left: 47%;  
-    bottom: 10%;
+    left: 95vh;
+    bottom: 10vh;
 }
-#proximo{
+
+#proximo {
     position: absolute;
-    right: 47%;
-    bottom: 10%;
+    right: 95vh;
+    bottom: 10vh;
 }
 
 
 /* fim */
 
-/*estilo para o baralho/deck*/  
+/*estilo para o baralho/deck*/
 
-    #deck {
-        display: grid;
-        grid-template: 1fr auto 1fr auto / 1fr 1fr 1fr 1fr 1fr;
-    }
-    
-    #voltar-deck{
-        grid-column: 1 / 2;
-        grid-row: 1 / 2;
-    }
-    
-    #deck h1 {
-        grid-column: 2 / 5;
-        grid-row: 1 / 2;
-    }
-    
-    #baralho-formado{
-        display: flex;
-        flex-wrap: wrap;
-        align-content: center;
-        justify-content: center;
-        background-color: rgb(24, 24, 24);
-        border: 2vh rgb(0, 0, 0) solid;
-        grid-column: 2 / 5;
-        grid-row: 2 / 3;
-        position: sticky;
-        top: 0; 
-    }
-    
-    #deck h2 {
-        grid-column: 2 / 5;
-        grid-row: 3 / 4;
-    }
-    
-    #colecao{
-        display: flex;
-        flex-wrap: wrap;
-        align-content: center;
-        justify-content: center;
-        background-color: rgb(36, 36, 36);
-        border: 1vh rgb(255, 255, 255) solid;
-        grid-column: 2 / 5;
-        grid-row: 4 / 5;
-    }
+#deck {
+    display: grid;
+    grid-template: 1fr auto 1fr auto / 1fr 1fr 1fr 1fr 1fr;
+}
 
-    #colecao img{
-        width: 23.32vh;
-        height: 32.84vh;
-    }
-    #baralho-formado img{
-        width: 11.66;
-        height: 16.42vh;
-    }
+#voltar-deck {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+}
+
+#deck h1 {
+    grid-column: 2 / 5;
+    grid-row: 1 / 2;
+}
+
+#baralho-formado {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    background-color: rgb(24, 24, 24);
+    border: 2vh rgb(0, 0, 0) solid;
+    grid-column: 2 / 5;
+    grid-row: 2 / 3;
+    position: sticky;
+    top: 0;
+}
+
+#deck h2 {
+    grid-column: 2 / 5;
+    grid-row: 3 / 4;
+}
+
+#colecao {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    background-color: rgb(36, 36, 36);
+    border: 1vh rgb(255, 255, 255) solid;
+    grid-column: 2 / 5;
+    grid-row: 4 / 5;
+}
+
+#colecao img {
+    width: 23.32vh;
+    height: 32.84vh;
+}
+
+#baralho-formado img {
+    width: 11.66;
+    height: 16.42vh;
+}
+
+/* fim */
+
+/* estilos para as batalhas */
+
+#arena{
+    display: grid;
+    grid-template: repeat(4, auto) / repeat(4, auto); 
+}
+#baralho-area{
+    grid-column: 4 / 5;
+    grid-row: 4 / 5;    
+    width: 24.5vh;
+    height: 35.5vh; 
+    justify-self:flex-end;
+    align-self: flex-end;
+}
+#player-deck{
+    grid-column: 1 / 4;
+    grid-row: 4 / 5;   
+    background-color: rgb(43, 43, 43);
+}
+#oponente-obj{
+    grid-column: 1 / 4; 
+    grid-row: 1 / 2;   
+    background-color: chartreuse;
+}
+#arena-slots div img{
+    height: 34.5vh;
+    width: 24.5vh;
+    float: right;
+}
+
+#slot1{
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;   
+    background-color: rgb(87, 0, 0);
+}
+#slot2{
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;   
+    background-color: rgb(20, 87, 0);
+}
+#slot3{
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;   
+    background-color: rgb(87, 0, 72);
+}
+#slot4{
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;   
+    background-color: rgb(87, 0, 0);
+}
+#slot5{
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;   
+    background-color: rgb(0, 87, 7);
+}
+#slot6{
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;   
+    background-color: rgb(84, 0, 87);
+}
+
+.dmg, .hp{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 5vh;
+    text-shadow: 1px 1px rgb(0, 0, 0);
+    color: rgb(1, 1, 43);
+    font-weight: 5px;
+}
+.hp {
+    float: right;
+}
+.dmg{
+    float: left;
+}
+
+
 /* fim */
