--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 
 .batalha {
     position: relative;
-    background-image: url("img/mesa.png");
+    background-image: url("img/background.jpg");
     background-size: contain;
 }
 
@@ -148,6 +148,11 @@ a {
     color: rgb(255, 0, 0);
 }
 
+#img-oponente{
+    width: 36.75vh;
+    height: 51.75vh;
+}
+
 #selecionador{
     display: grid;
     grid-template: auto auto auto / auto auto 7vh auto 7vh auto auto; 
@@ -160,16 +165,6 @@ a {
     color: rgb(255, 255, 255);
     grid-row: 1 / 2;
     grid-column: 2 / 7; 
-}
-#oponente {
-    font-size: 5vh;
-    background-size: cover;
-    text-shadow: 2px 2px rgb(104, 182, 255);
-    color: rgb(255, 255, 255);
-    text-align: center;
-    font-family: 'Dancing Script', cursive;
-    width: 30vh;
-    padding: 1vh 5vh;
 }
 #selecionador a{
     grid-row: 2 / 3;
@@ -274,7 +269,7 @@ a {
 #oponente-obj{
     grid-column: 4 / 7; 
     grid-row: 1 / 2;   
-    background-image: url(); 
+    background-color: cyan; 
 }
 #arena-slots div img{
     height: 34.5vh;
