--- a/styles.css
+++ b/styles.css
@@ -11,13 +11,13 @@ body {
     background-color: rgb(19, 19, 19);
 }
 
-.sala-masmorra {
+#sala-masmorra {
     background-image: url("img/background2.jpg");
-    background-size: contain;
-    background-position: center;
+    background-size: cover;
     background-repeat: no-repeat;
-    background-color: rgb(0, 0, 0);
+    background-position: bottom;
 }
+
 
 .batalha {
     position: relative;
@@ -27,6 +27,21 @@ body {
 
 .background-deck {
     background-color: rgb(44, 44, 44);
+}
+#background-sobre-nos {
+    background-image: url("img/background-sobre-nos");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
+}
+
+#sobre-nos {
+    color: whitesmoke;
+    font-size: 2rem;
+}
+
+.referencias{
+    background-image: url("img/background-referencias");
 }
 
 /* estilos para o index */
