--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,7 @@ body {
 
 .batalha {
     position: relative;
-    background-image: url("img/background.jpg");
-    background-size: contain;
+    background-color: chocolate;
 }
 
 .background-deck {
@@ -312,42 +311,79 @@ a {
 .adicionar-baralho{
     opacity: 10%;
 }
+.alerta-len{
+    background-color: rgb(228, 39, 5);
+    border: solid black 1vh;
+    border-radius: 10%;
+    position: sticky;
+    top: 0; 
+    left: 0;
+    display: inline;
+}
+.alerta-len p{
+    text-align: center;
+    font-size: 4vh;
+    font-weight: 700;   
+    font-family: 'Dancing Script', cursive;
+}
+
+.alerta-max{
+    background-color: rgb(54, 204, 17);
+    border: solid black 1vh;
+    border-radius: 10%;
+    position: sticky;
+    top: 0; 
+    left: 0;
+    display: inline;
+}
+.alerta-max p{
+    text-align: center;
+    font-size: 4vh;
+    font-weight: 700;   
+    font-family: 'Dancing Script', cursive;
+}
 /* fim */
 
 /* estilos para as batalhas */
 
+.batalha{
+    overflow: hidden;
+}
 #arena{
     display: grid;
-    grid-template: repeat(4, auto) / repeat(9, 1fr); 
+    grid-template: repeat(4, auto) / repeat(9, auto); 
     margin-left: 1vh; 
     margin-right: 1vh;
+    align-items: center;
 }
 #baralho-area{
     grid-column: 8 / 9;
     grid-row: 4 / 5;    
-    width: 24.5vh;
-    height: 35.5vh; 
-    justify-self:flex-end;
-    align-self: flex-end;
+    width: 18.75vh;
+    height: 25.75vh; 
+    justify-self: center;
 }
 #player-deck{
     grid-column: 4 / 7;
     grid-row: 4 / 5;   
     background-color: rgb(43, 43, 43);
+    padding: 2vh;
+    border: 1vh blue solid;
+    display: flex;
+    justify-content: center;
 }
 #player-deck img{
-    width: 17.49vh;
-    height: 24.63vh;
+    width: 12.5vh;
+    height: 17.25vh;
 }
 #oponente-obj{
     grid-column: 4 / 7; 
     grid-row: 1 / 2;   
-    background-color: cyan; 
+    justify-self: center;
 }
-#arena-slots div img{
-    height: 34.5vh;
-    width: 24.5vh;
-    float: right;
+#arena div img{
+    width: 12.5vh;
+    height: 17.25vh;
 }
 
 #slot1{
@@ -383,68 +419,44 @@ a {
 #vida-player{
     grid-column: 2 / 3;
     grid-row: 1 / 2;   
-    background-color: rgb(14, 199, 255);
+    background-image: url('img/aro.png');
 }
 #vida-inimigo{
     grid-column: 2 / 3;
     grid-row: 4 / 5;   
-    background-color: rgb(204, 0, 255);
+    background-image: url('img/aro.png');
 }
 
 #passa-turno{
     grid-column: 8 / 9;
     grid-row: 2 / 4;  
-    background-color: rgb(166, 135, 173);
     font-size: 12vh;
     text-align: center;
+    justify-self: center;
+    width: 12.5vh;
+    height: 17.25vh;
 }
 #batalha-voltar{
     grid-column: 8 / 9;
     grid-row: 1 / 2 ;  
+    justify-self: flex-end;
+    align-self: flex-start;
+    font-size: 1vh;
 }
 .dmg, .hp{
     font-family: 'Times New Roman', Times, serif;
-    font-size: 5vh;
-    text-shadow: 1px 1px rgb(0, 0, 0);
-    color: rgb(1, 1, 43);
-    font-weight: 5px;
+    font-size: 4vh;
+    text-shadow: 2px 1px rgb(75, 75, 75);
+    color: rgb(31, 28, 28);
+    font-weight: bold;
 }
 .hp {
-    float: right;
+    padding: 1vh 1vh; 
+    float: right;  
 }
 .dmg{
+    padding: 1vh;
     float: left;
-}
-.alerta-len{
-    background-color: rgb(228, 39, 5);
-    border: solid black 1vh;
-    border-radius: 10%;
-    position: sticky;
-    top: 0; 
-    left: 0;
-    display: inline;
-}
-.alerta-len p{
-    text-align: center;
-    font-size: 4vh;
-    font-weight: 700;   
-    font-family: 'Dancing Script', cursive;
-}
-
-.alerta-max{
-    background-color: rgb(54, 204, 17);
-    border: solid black 1vh;
-    border-radius: 10%;
-    position: sticky;
-    top: 0; 
-    left: 0;
-    display: inline;
-}
-.alerta-max p{
-    text-align: center;
-    font-size: 4vh;
-    font-weight: 700;   
-    font-family: 'Dancing Script', cursive;
 }
 
 /* fim */
