--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,9 @@ body {
 .batalha {
     position: relative;
     background-color: chocolate;
+    background-image: url("img/batalha-background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .background-deck {
@@ -93,15 +96,19 @@ body {
 
 /*estilos para os botoes */
 .botao {
+    display: flex;
     text-shadow: 2px 2px rgb(104, 182, 255);
     color: rgb(255, 255, 255);
     text-align: center;
-    font-size: 9vh;
+    font-size: 8vh;
     background-color: rgb(2, 57, 88);
     font-family: 'Dancing Script', cursive;
+    justify-content: center;
+    align-items: center;
+    
 
-    width: 42vh;
-    height: 20vh;
+    width: 40vh;
+    height: 22vh;
     border-radius: 3%;
     border: 0.2vh solid black;
 }
@@ -114,7 +121,7 @@ a {
 .botao:hover {
     background-color: rgba(7, 44, 66, 0.904);
     cursor: pointer;
-    transition: 300ms;
+    transition: 350ms;
     color: gray;
     text-shadow: goldenrod 2px 2px;
     border: 1.2vh solid rgba(255, 230, 0, 0.795);
@@ -136,15 +143,16 @@ a {
     top: 0px;
     left: 0px;
     color: rgb(255, 255, 255);
+    border-radius: 10%;
     text-shadow: 1px 1px blue;
     text-align: center;
-    background-color: rgb(94, 94, 94);
+    background-color: rgb(26, 24, 24);
     font-family: 'Dancing Script', cursive;
     border-radius: 20%;
     height: 9vh;
     width: 11vh;
     padding-bottom: 2vh;
-    border: 1vh solid rgb(255, 255, 255);
+    border: 1vh solid rgb(0, 0, 0);
 }
 
 .volta:hover {
@@ -368,7 +376,8 @@ a {
     grid-row: 4 / 5;   
     background-color: rgb(43, 43, 43);
     padding: 2vh;
-    border: 1vh blue solid;
+    border: 1vh rgb(26, 24, 24) solid;
+    border-radius: 10%;
     display: flex;
     justify-content: center;
 }
@@ -391,37 +400,49 @@ a {
 #slot1{
     grid-column: 4 / 5;
     grid-row: 2 / 3;   
+    border: 1vh rgb(26, 24, 24) solid;
+    border-radius: 10%;
     background-color: rgb(87, 0, 0);
 }
 #slot2{
     grid-column: 5 / 6;
     grid-row: 2 / 3;   
+    border: 1vh rgb(26, 24, 24) solid;
+    border-radius: 10%;
     background-color: rgb(20, 87, 0);
 }
 #slot3{
     grid-column: 6 / 7;
     grid-row: 2 / 3;   
+    border: 1vh rgb(26, 24, 24) solid;
+    border-radius: 10%;
     background-color: rgb(87, 0, 72);
 }
 #slot4{
     grid-column: 4 / 5;
     grid-row: 3 / 4;   
+    border: 1vh rgb(26, 24, 24) solid;
+    border-radius: 10%;
     background-color: rgb(87, 0, 0);
 }
 #slot5{
     grid-column: 5 / 6;
     grid-row: 3 / 4;   
+    border: 1vh rgb(26, 24, 24) solid;
+    border-radius: 10%;
     background-color: rgb(0, 87, 7);
 }
 #slot6{
     grid-column: 6 / 7;
     grid-row: 3 / 4;   
+    border: 1vh rgb(26, 24, 24) solid;
+    border-radius: 10%;
     background-color: rgb(84, 0, 87);
 }
 #vida-inimigo{
     grid-column: 2 / 3;
     grid-row: 1 / 2;   
-    border-radius: 50%;
+    border-radius: 48.9%;
     border: solid black 0.5vh;
     padding: 4.2vh 2.4vh;
     background: radial-gradient(circle, rgba(255,0,0,1) 0%, rgb(126, 43, 43) 100%);
@@ -434,11 +455,10 @@ a {
 #mana-player{
     grid-column: 2 / 3;
     grid-row: 3 / 4;   
-    border-radius: 50%;
+    border-radius: 48.9%;
     border: solid black 0.5vh;
     background: radial-gradient(circle, rgb(240, 219, 127) 0%, rgb(115, 217, 224) 100%);
     padding: 4.2vh 2.4vh;
-    background-color: gray;
     display: flex;
     justify-self: center;
     align-self: center;
@@ -449,7 +469,7 @@ a {
 #vida-player{
     grid-column: 2 / 3;
     grid-row: 4 / 5;   
-    border-radius: 50%;
+    border-radius: 48.9%;
     border: solid black 0.5vh;
     padding: 4.2vh 2.4vh;
     background: radial-gradient(circle, rgba(255,0,0,1) 0%, rgb(126, 43, 43) 100%);
@@ -483,6 +503,7 @@ a {
     grid-row: 3 / 4;   
     width: 18vh;
     height: 18vh;
+    display: flex;
     justify-self: center;
     align-self: center;
 }
