--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@ body {
     min-height: 100%;
     user-select: none;
 }
+:root{
+    ---borda-escura: 1vh rgb(0, 0, 0) solid;
+    ---borda-redondinha: 2vh;
+}
 
 /* definir backgrounds */
 .masmorra {
@@ -29,7 +33,7 @@ body {
 
 .batalha {
     position: relative;
-    background-color: chocolate;
+    background-color: rgb(52, 58, 68);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -359,33 +363,69 @@ a {
 }
 #arena{
     display: grid;
-    grid-template: repeat(4, auto) / repeat(9, auto); 
+    grid-template: repeat(4, auto) / repeat(5, 1fr); 
     margin-left: 1vh; 
     margin-right: 1vh;
     align-items: center;
+    grid-gap: 1vh;
+}
+#batalha-voltar{
+    grid-column: 5 / 6;
+    grid-row: 1 / 2 ;  
+    justify-self: center;
+    align-self: center;
+}
+#batalha-voltar div{
+    display: flex;
+    font-size: 4vh;
+    color: rgb(243, 221, 221);
+    text-shadow: 4px 1px 1px rgb(92, 1, 1);
+    background-color: rgb(26, 24, 24);
+    font-family:'Times New Roman', Times, serif;
+    border-radius: 20%;
+    padding: 10px 10px;
+    align-items: center;
+    justify-content: center;
+    height: 9vh;
+    width: 11vh;
+    border: 1vh solid rgb(0, 0, 0);
 }
 #baralho-area{
-    grid-column: 8 / 9;
+    grid-column: 5 / 6;
     grid-row: 4 / 5;    
-    width: 18.75vh;
-    height: 25.75vh; 
+    width: 12vh;
+    height: 17vh; 
     justify-self: center;
+    filter:drop-shadow(100px);
+    border: var(---borda-escura);
+    border-radius: var(---borda-redondinha);
+}
+#baralho-texto{
+    justify-self: center;
+    align-self: flex-end;
+    text-align: center;
+    font-size: 4vh;
+    font-weight: 200;
+    font-family: 'Dancing Script', cursive;
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px rgb(0, 0, 41);
+    grid-column: 5 / 6;
+    grid-row: 3 / 4;  
 }
 #baralho-area:hover{
     cursor: pointer;
 }
-#baralho-area:active{
-    filter: brightness(200%);
-}
 #player-deck{
-    grid-column: 4 / 7;
+    grid-column: 2 / 5;
     grid-row: 4 / 5;   
-    background-color: rgb(43, 43, 43);
+    background: radial-gradient(circle, rgba(13,13,13,1) 0%, rgba(68,63,63,1) 100%);
     padding: 2vh;
-    border: 1vh rgb(26, 24, 24) solid;
-    border-radius: 10%;
+    border: 1vh rgb(0, 0, 0) ridge;
+    border-radius: var(---borda-redondinha);
     display: flex;
     justify-content: center;
+    width: 144vh;
+    box-sizing: border-box;
 }
 #player-deck img{
     width: 12.5vh;
@@ -393,66 +433,76 @@ a {
 }
 .drag {
     cursor: pointer;
+    border: 0.7vh rgb(199, 157, 18) ridge;
 }
 .drag:active{
     filter: brightness(150%);
 }
+.slotabble{
+    background: radial-gradient(circle, rgba(185,186,19,1) 0%, rgba(50,148,134,1) 100%);
+}   
+#area-inimigo div{
+    background: radial-gradient(circle, rgba(185,186,19,1) 0%, rgba(50,148,134,1) 100%);
+}
 #oponente-obj{
-    grid-column: 4 / 7; 
+    grid-column: 2 / 5; 
     grid-row: 1 / 2;   
     justify-self: center;
     width: 24.5vh;
-    height: 34.5vh;
+    height: 24.5vh;
 }
 #arena div img{
     width: 12.5vh;
     height: 17.25vh;
 }
-
+#area-inimigo {
+    grid-column: 2 / 5; 
+    grid-row: 2 / 3;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background: radial-gradient(circle, rgba(156,23,121,1) 0%, rgba(28,12,27,1) 100%);
+    width: 144vh;
+    border: var(---borda-escura);
+    border-radius: var(---borda-redondinha);
+}
+#area-aliado {
+    grid-column: 2 / 5; 
+    grid-row: 3 / 4;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background: radial-gradient(circle, rgba(23,59,156,1) 0%, rgba(28,12,27,1) 100%);
+    width: 144vh;
+    border: var(---borda-escura);
+    border-radius: var(---borda-redondinha);
+}
 #slot1{
-    grid-column: 4 / 5;
-    grid-row: 2 / 3;   
-    border: 1vh rgb(26, 24, 24) solid;
-    border-radius: 10%;
-    background-color: rgb(87, 0, 0);
+    border: var(---borda-escura);
+    border-radius: var(---borda-redondinha);
 }
 #slot2{
-    grid-column: 5 / 6;
-    grid-row: 2 / 3;   
-    border: 1vh rgb(26, 24, 24) solid;
-    border-radius: 10%;
-    background-color: rgb(20, 87, 0);
+    border: var(---borda-escura);
+    border-radius: var(---borda-redondinha);
 }
 #slot3{
-    grid-column: 6 / 7;
-    grid-row: 2 / 3;   
-    border: 1vh rgb(26, 24, 24) solid;
-    border-radius: 10%;
-    background-color: rgb(87, 0, 72);
+    border: var(---borda-escura);
+    border-radius: var(---borda-redondinha);
 }
 #slot4{
-    grid-column: 4 / 5;
-    grid-row: 3 / 4;   
-    border: 1vh rgb(26, 24, 24) solid;
-    border-radius: 10%;
-    background-color: rgb(87, 0, 0);
+    border: var(---borda-escura);
+    border-radius: var(---borda-redondinha);
 }
 #slot5{
-    grid-column: 5 / 6;
-    grid-row: 3 / 4;   
-    border: 1vh rgb(26, 24, 24) solid;
-    border-radius: 10%;
-    background-color: rgb(0, 87, 7);
+    border: var(---borda-escura);
+    border-radius: var(---borda-redondinha);
 }
 #slot6{
-    grid-column: 6 / 7;
-    grid-row: 3 / 4;   
-    border: 1vh rgb(26, 24, 24) solid;
-    border-radius: 10%;
-    background-color: rgb(84, 0, 87);
+    border: var(---borda-escura);
+    border-radius: var(---borda-redondinha);
 }
 #vida-inimigo{
-    grid-column: 2 / 3;
+    grid-column: 1 / 2;
     grid-row: 1 / 2;   
     border-radius: 48.9%;
     border: solid black 0.5vh;
@@ -462,10 +512,13 @@ a {
     justify-self: center;
     align-self: center;
     z-index: -1;
+    width: 15vh;
+    height: 15vh;
+    box-sizing: border-box;
 }
 
 #mana-player{
-    grid-column: 2 / 3;
+    grid-column: 1 / 2;
     grid-row: 3 / 4;   
     border-radius: 48.9%;
     border: solid black 0.5vh;
@@ -475,11 +528,13 @@ a {
     justify-self: center;
     align-self: center;
     z-index: -1;
-    
+    width: 15vh;
+    height: 15vh;
+    box-sizing: border-box;
 } 
 
 #vida-player{
-    grid-column: 2 / 3;
+    grid-column: 1 / 2;
     grid-row: 4 / 5;   
     border-radius: 48.9%;
     border: solid black 0.5vh;
@@ -489,10 +544,13 @@ a {
     justify-self: center;
     align-self: center;
     z-index: -1;
+    width: 15vh;
+    height: 15vh;
+    box-sizing: border-box;
 }
 
 #aro1{
-    grid-column: 2 / 3;
+    grid-column: 1 / 2;
     grid-row: 1 / 2; 
     width: 18vh;
     height: 18vh;
@@ -502,7 +560,7 @@ a {
 }
 
 #aro2{
-    grid-column: 2 / 3;
+    grid-column: 1 / 2;
     grid-row: 4 / 5;   
     width: 18vh;
     height: 18vh;
@@ -511,7 +569,7 @@ a {
     align-self: center;
 }
 #aro3{
-    grid-column: 2 / 3;
+    grid-column: 1 / 2;
     grid-row: 3 / 4;   
     width: 18vh;
     height: 18vh;
@@ -521,26 +579,42 @@ a {
 }
 
 #passa-turno{
-    grid-column: 8 / 9;
-    grid-row: 2 / 4;  
+    grid-column: 5 / 6;
+    grid-row: 2 / 3;  
     font-size: 12vh;
     text-align: center;
     justify-self: center;
     width: 12.5vh;
     height: 17.25vh;
+    background-color: azure;
+    border: var(---borda-escura);
+    border-radius: var(---borda-redondinha);
 }
-#batalha-voltar{
-    grid-column: 8 / 9;
-    grid-row: 1 / 2 ;  
-    justify-self: flex-end;
-    align-self: flex-start;
-    font-size: 1vh;
+#passa-turno:hover{
+    cursor: pointer;
+    transition: 800ms;
+    background-color: rgb(255, 255, 255);
+    filter:invert(100%);
 }
-.dmg, .hp, .mana{
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 4vh;
-    text-shadow: 2px 1px rgb(75, 75, 75);
-    color: rgb(31, 28, 28);
+
+#turno-contador{
+    justify-self: center;
+    align-self: flex-end;
+    text-align: center;
+    font-size: 5vh;
+    font-weight: 200;
+    font-family: 'Dancing Script', cursive;
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px rgb(0, 0, 41);
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;  
+}
+
+.dmg, .hp, .mana, #vida-player, #vida-inimigo, #mana-player{
+    font-family: sans-serif;
+    font-size: 3.5vh;
+    text-shadow: 2px 2px rgb(0, 0, 0);
+    color: rgb(80, 80, 80);
     font-weight: bold;
 }
 .hp {
