--- a/styles.css
+++ b/styles.css
@@ -322,8 +322,8 @@ a {
 }
 
 #colecao img {
-    width: 23.32vh;
-    height: 32.84vh;
+    width: 160px;
+    height: 228px;
     cursor: pointer;
     border: ridge rgb(255, 154, 3) 1vh;
 }
@@ -433,19 +433,11 @@ a {
     display: flex;
     justify-content: center;
     width: 146vh;
-    height: 24.25vh;
+    height: 24vh;
     box-sizing: border-box;
 }
-#player-deck img{
-    width: 18.5vh;
-    height: 23.25vh;
-}
 .drag {
-    cursor: pointer;
-    border: 0.7vh rgb(199, 157, 18) ridge;
-}
-.drag:active{
-    filter: brightness(150%);
+    cursor: pointer;    
 }
 .slotabble{
     background: radial-gradient(circle, rgba(185,186,19,1) 0%, rgba(50,148,134,1) 100%);
@@ -457,12 +449,20 @@ a {
     grid-column: 2 / 5; 
     grid-row: 1 / 2;   
     justify-self: center;
-    width: 24.5vh;
-    height: 24.5vh;
-}
-#arena div img{
     width: 12.5vh;
-    height: 17.25vh;
+    height: 12.5vh;
+}
+.drag:active{
+    width: 161.25px;
+    height: 228px;
+}
+.drag{
+    width: 107.5px;
+    height: 152px;
+}
+#arena div:not(#player-deck) img{
+    width: 20vh;
+    height: 22vh;
 }
 #area-inimigo {
     grid-column: 2 / 5; 
@@ -639,7 +639,6 @@ a {
     padding: 1vh;
     float: left;
 }
-
 .Imunidade{
     opacity: 0.5;
 }
