--- a/styles.css
+++ b/styles.css
@@ -481,6 +481,37 @@ a {
     grid-column: 5 / 6;
     grid-row: 3 / 4;  
 }
+#falas{
+    justify-self: center;
+    align-self: flex-end;
+    text-align: center;
+    font-size: 3vh;
+    font-weight: 200;
+    font-family:'Times New Roman', Times, serif; 
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px rgb(0, 0, 41);
+    grid-column: 4 / 5;
+    grid-row: 1 / 2;  
+}
+#info-card{
+    justify-self: center;
+    align-self: flex-end;
+    text-align: center;
+    font-size: 2.5vh;
+    font-weight: 200;
+    font-family:'Times New Roman', Times, serif; 
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px rgb(0, 0, 41);
+    position: absolute;
+    top: -100px; 
+    background-color: rgb(53, 51, 51);
+    border: ridge white 0.5vh;
+    padding: 5px 5px;
+    border-radius: var(--borda-redondinha);
+}
+.hide{
+    display: none;
+}
 #baralho-area:hover{
     cursor: pointer;
 }
@@ -496,9 +527,6 @@ a {
     width: 146vh;
     height: 24vh;
     box-sizing: border-box;
-}
-.drag {
-    cursor: pointer;    
 }
 .slotabble{
     background: radial-gradient(circle, rgba(185,186,19,1) 0%, rgba(50,148,134,1) 100%);
@@ -521,6 +549,7 @@ a {
     height: 34.7vh;
 }
 .drag{
+    cursor: pointer;   
     width: 16.36vh;
     height: 23.13vh;
 }
