--- a/styles.css
+++ b/styles.css
@@ -129,18 +129,7 @@ body {
   grid-column: 2 / 5;
 }
 
-#delete-data {
-  grid-row: 3 / 4;
-  grid-column: 5 / 6;
-  color: rgb(12, 12, 12);
-  background-color: rgb(219, 213, 213);
-  width: 10vh;
-  height: 10vh;
-  display: flex;
-  justify-self: flex-end;
-  align-self: center;
-  cursor: pointer;
-}
+
 
 #save-data {
   grid-row: 3 / 4;
@@ -155,18 +144,7 @@ body {
   cursor: pointer;
 }
 
-#load-data {
-  grid-row: 3 / 4;
-  grid-column: 1 / 2;
-  color: rgb(12, 12, 12);
-  background-color: rgb(219, 213, 213);
-  width: 10vh;
-  height: 10vh;
-  display: flex;
-  justify-self: center;
-  align-self: center;
-  cursor: pointer;
-}
+
 
 #jogar {
   grid-row: 2 / 3;
@@ -216,7 +194,7 @@ a {
   transition: 350ms;
   color: gray;
   text-shadow: goldenrod 2px 2px;
-  border: 1.2vh ridge rgb(5, 156, 38);
+  border: 1.2vh ridge rgb(103, 128, 109);
   height: 20vh;
   width: 38vh;
 }
@@ -345,7 +323,7 @@ a {
 #img-oponente {
   width: 32.66vh;
   height: 45.66vh;
-  border: rgb(146, 146, 146) ridge 2vh;
+  border: rgb(192, 30, 30) ridge 2vh;
   border-radius: 2vh;
 }
 
@@ -602,8 +580,13 @@ a {
   grid-column: 2 / 5;
   grid-row: 1 / 2;
   justify-self: center;
-  width: 12.5vh;
-  height: 12.5vh;
+  position: absolute;
+  top: 0;
+  width: 36vh;
+  height: 34vh;
+  z-index: -2;
+  border: var(--borda-escura);
+  border-radius: var(--borda-redondinha);
 }
 
 .drag:active {
